assets/css/beautifuljekyll.css
/* ... */
#nav-search-text {
  display: none;
}

@media (max-width: 1199px) {
  #nav-search-icon {
    display: none;
  }
  #nav-search-text {
    display: inline-block;
  }
}

/* --- Card Section --- */

.card-section {
  align-items: center;
}

.card {
  margin-top: 1.5rem;
  display: flex;
  align-items: center;
  background: none;
  border: none;
  box-shadow: none;
  transition: transform 0.2s ease-in-out;
}

.card-horizontal {
  flex-direction: row;
  align-items: top;
  align-items: flex-start;
  justify-content: flex-start;
}

.card-logo {
  flex-shrink: 0;
  width: 80px;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 1rem;
}

.card-logo img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.card-content {
  flex: 1;
  color: var(--text-col);
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.card-content p {
  margin: 0;
  white-space: normal;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: pre-line;
}

.card-center-content {
  flex: 1;
  color: var(--text-col);
  /* line-height: 1.6; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  width: 100%;
  box-sizing: border-box;
}

.card-content p:last-child {
  margin-bottom: 0;
}

@media (max-width: 768px) {
  .card {
    width: 100%;
  }

  .card-horizontal {
    flex-direction: row;
  }

  .card-logo {
    width: 50px;
    height: 50px;
    margin: 0 0.75rem;
  }

  .card-content {
    min-height: auto;
    padding: 0;
    text-align: left;
  }
}

@media (min-width: 768px) {
  .card-horizontal {
    border-bottom: 1px solid #ddd;
    padding-bottom: 0.5rem;
  }

}

.card-title {
  font-family: var(--header-font);
  font-size: 1.25rem;
  font-weight: 800;
  color: var(--text-col);
  text-align: left;
  flex-direction: column;
  display: flex;
}

